[package]
name = "ikedi"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Sede <4968379+styvane@users.noreply.github.com>"]
publish = false
keywords = ["medical", "clinical-research", "dicom"]
default-run = "ikedi"
categories = ["command-line-utilities"]
license = "AGPL-3.0-or-later"

[[bin]]
name = "ikedi"
path = "bin/ikedi.rs"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
dicom = "0.7.0"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"

[dependencies.tokio]
version = "1.39.2"
features = ["sync", "rt", "macros", "rt-multi-thread", "io-util", "io-std"]

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_const_for_fn = "deny"
unwrap_used = "warn"
